# weather-flick-back

./: .env.example  .gitignore  .pre-commit-config.yaml  ADMIN_GUIDE.md  AIR_QUALITY_GUIDE.md  Dockerfile  EMAIL_VERIFICATION_GUIDE.md  Jenkinsfile  KMA_API_GUIDE.md  NAVER_MAP_GUIDE.md  README.md  add_plan_type_column.py  alembic.ini  check_env.py  check_schema.py  create_admin.py  docker-compose.yml  env_example.txt  main.py  openai_usage_guide.md  pyproject.toml  requirements.txt  simple_chatbot_test.py  simple_server_test.py  test_all_apis.py  test_chatbot_api.py  test_import.py  test_kma_api.py  test_odsay_api.py  test_odsay_api_detailed.py  test_openai_integration.py  weather_flick.db
.cursor/rules/: team.mdc
alembic/versions/: 20240610_add_reviews_recommend_table.py  add_plan_type_to_travel_plans.py
app/: __init__.py  auth.py  config.py  config_email_verification.py  database.py  exception_handlers.py  exceptions.py  logging_config.py  main.py  models.py  schemas.py  validators.py
app/api/: routes.py
app/middleware/: activity_logger.py  activity_tracking.py  error_handling.py  json_encoder.py  monitoring.py  security.py  timezone_middleware.py
app/routers/: __init__.py  admin.py  advanced_travel.py  air_quality.py  attractions.py  auth.py  categories.py  chatbot.py  config.py  contact.py  custom_travel.py  custom_travel_converter.py  destination_likes_saves.py  destinations.py  events.py  google.py  kma_weather.py  leisure_sports.py  likes_recommend.py  local_info.py  location.py  naver_map.py  notifications.py  personalized_recommendations.py  plan.py  realtime_travel.py  recommend_reviews.py  recommendations.py  regions.py  review_likes.py  route_optimization.py  routes.py  system.py  travel_course.py  travel_course_like.py  travel_course_saves.py  travel_plan_bookmarks.py  travel_plan_share.py  travel_plans.py  weather.py
app/schema_models/: chatbot.py  travel_course.py
app/schemas/: __init__.py  auth.py  chatbot.py  contact.py  notifications.py  travel_course_like.py
app/services/: __init__.py  ab_testing_service.py  advanced_ai_recommendation.py  ai_recommendation.py  air_quality_service.py  category_service.py  chatbot_service.py  chatbot_service_enhanced.py  contact_service.py  destination_service.py  email_service.py  enhanced_ai_recommendation.py  fcm_service.py  fcm_service_legacy.py  feedback_learning.py  google_oauth_service.py  google_places_service.py  kma_weather_service.py  local_info_service.py  naver_map_service.py  notification_service.py  odsay_service.py  openai_service.py  prompt_templates.py  realtime_info_service.py  recommendation_metrics.py  recommendation_service.py  region_service.py  route_optimizer.py  route_service.py  tmap_service.py  tour_api_service.py  travel_plan_optimizer.py  user_behavior_service.py  weather_service.py
app/utils/: __init__.py  cache.py  cache_decorator.py  common.py  kma_utils.py  redis_client.py  timezone_utils.py
logs/: app.json
migrations/: create_bookmarks_table.sql  create_sharing_tables.sql  env.py  fix_travel_routes_schema_mismatch.sql  update_travel_routes_schema.sql
migrations/versions/: 001_add_timezone_support.py  002_kto_tables_timezone.py  09a536f1e451_merge_heads.py  0fd45bc85fb9_add_approval_status_to_contact.py  1c08a23546eb_add_tags_to_destination_model.py  20240610_add_travel_course_likes.py  (+41 more)
(+2 files in other folders)
